# GaudiDDPlanarDigiProcessor

./: CMakeLists.txt
k4ProjectTemplate/: CMakeLists.txt
k4ProjectTemplate/src/components/: GaudiDDLPlanarDigiProcessor.cpp  GaudiDDLPlanarDigiProcessor.h  HelloWorldAlg.cpp
